Resolved a mistake: Changed title and heading in Index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>YouTube</title>
+    <title>VideoTube</title>
   </head>
   <body>
     <header>
       <img src="Images/Logo.png" alt="This browser does not support images">
-      <h1>Welcome to YouTube</h1>
+      <h1>Welcome to VideoTube</h1>
     </header>
     <main>
       <section>
