--- a/2.html
+++ b/2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Red Flower Video</title>
+    <title>Galaxy Video</title>
   </head>
   <body>
     <header>
