Opened up the list item tags to blocks and closed a tags

--- a/3.html
+++ b/3.html
@@ -20,8 +20,12 @@
     <aside>
       <h2>More Videos</h2>
       <ul>
-        <li><a href="1.html">Red Flower Video</a></li>
-        <li><a href="2.html">Galaxy Video</a></li>
+        <li>
+          <a href="1.html">Red Flower Video</a>
+        </li>
+        <li>
+          <a href="2.html">Galaxy Video</a>
+        </li>
       </ul>
     </aside>
   </body>
