--- a/1.html
+++ b/1.html
@@ -20,8 +20,12 @@
     <aside>
       <h2>More Videos</h2>
       <ul>
-        <li><a href="2.html">Galaxy Video</a></li>
-        <li><a href="3.html">Atoms Video</a></li>
+        <li>
+          <a href="2.html">Galaxy Video</a><
+          /li>
+        <li>
+          <a href="3.html">Atoms Video</a>
+        </li>
       </ul>
     </aside>
   </body>
