--- a/2.html
+++ b/2.html
@@ -20,8 +20,13 @@
     <aside>
       <h2>More Videos</h2>
       <ul>
-        <li><a href="1.html">Red Flower Video</a></li>
-        <li><a href="3.html">Atoms Video</a></li>
+        <li>
+          <a href="1.html">Red Flower Video</a>
+        </li>
+        <li>
+          <a href="3.html">Atoms Video</a>
+        </li>
       </ul>
+    </aside>
   </body>
 </html>
