--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
           <a href="1.html">
             <h2>Red Flower Video</h2>
             <img src="Images/RedFlower.png" alt="Red Flower Image">
-          <a>
+          </a>
         </figure>
         <figcaption>This is a video of a red flower blooming</figcaption>
         <figure>
           <a href="2.html">
             <h2>Galaxy Video</h2>
-            <img src="Images/Galaxy.png" alt="Galaxy Image"><a>
+            <img src="Images/Galaxy.png" alt="Galaxy Image">
+          </a>
         </figure>
         <figcaption>This is a video of a galaxy</figcaption>
         <figure>
           <a href="3.html">
-             <h2>Atoms Video</h2>  
-             <img src="Images/Atoms.png" alt="Atoms Image"><a>
+             <h2>Atoms Video</h2>
+             <img src="Images/Atoms.png" alt="Atoms Image">
+          </a>
         </figure>
         <figcaption>This is a video showing atom creation</figcaption>
       </section>
